--- a/css/styles.css
+++ b/css/styles.css
@@ -603,20 +603,6 @@ li input[type="checkbox"] {
   
 }
 
-.studio-height {
-    height: 600px;
-    background-color: #2F303A;
-    background: linear-gradient(rgba(90, 90, 94, 0.7), rgba(70, 72, 92, 0.2)), url(../images/background-for-studio.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-
 .container-feature-studio,
 .container-feature-studio-1
 {
@@ -732,19 +718,19 @@ li input[type="checkbox"] {
     gap: 94px;
 }
 
-ul.informations-of-contact li{
+ul.informations-of-contact li {
     margin-bottom: 12px;
 }
 
 ul.informations-of-contact li:last-child {
     margin-bottom: 60px;
-  }
+}
 
-   .general-container{
+.general-container {
     width: 100%;
-      max-width: 1200px;
-      margin: 0 auto;
-  } 
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
 .center-text{
     display: flex;
@@ -1004,8 +990,8 @@ ul.informations-of-contact li:last-child {
     text-decoration: none;
 }
 
-.section__span--logo 
-/* .span-for-link-modal */
+.section__span--logo ,
+.modal__span-terms
 {
     color: #2196F3;
 }
@@ -1126,15 +1112,269 @@ ul.informations-of-contact li:last-child {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.studio-height {
+    height: 600px;
+    background-color: #2F303A;
+    background: linear-gradient(rgba(90, 90, 94, 0.7), rgba(70, 72, 92, 0.2)), url(../images/background-for-studio.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.studio-height__title{
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    padding-bottom: 30px;
+}
+
+.button ,
+.studio-height__button ,
+.modal__button-submit
+{
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    background: #F5F4FA;
+    border: 0;
+    border-radius: 4px;
+    padding: 6px 22px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.studio-height__button{
+    color: #FFFFFF;
+    background: #2196F3;
+    padding: 10px 20px; 
+    
+}
 
 
 
 
 
+
+/* Modal  BEM*/
+
+
+.modal__div {
+    width: 528px;
+    height: 581px;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    position: relative;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 40px;
+}
+
+.modal__close-button-position{
+    width: 30px;
+    height: 30px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    top: 8px;
+    right: 8px;
+    position: absolute;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__close-button 
+{
+    top: 17px;
+    right: 17px;
+    width: 11px;
+    height: 11px;
+}
+
+.modal__elements {
+    width: 448px;
+    margin: 0px auto;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.modal__title{
+    position: relative;
+    height: 23px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    /* padding-top: 40px; */
+    padding-bottom: 12px;
+
+}
+
+.modal__contact-form{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    
+}
+
+.modal__contact-form:focus+.modal__svg-contact  {
+    fill: #2196F3;
+}
+
+.modal__replace-checkbox {
+    width: 16px;
+    height: 16px;
+    border: 2px solid black;
+    border-radius: 2px;
+}
+
+.modal__contact-form input[type="checkbox"]:checked+.modal__replace-checkbox{
+    background: #2196F3;
+    border-color: #2196F3;
+}
+
+.modal__contact-form input[type="checkbox"]{
+    display: none;
+}
+
+.modal__terms-svg{
+    width: 16px;
+    height: 16px;
+    opacity: 0;
+    fill: #FFFFFF;
+}
+
+.modal__contact-form input[type="checkbox"]:checked+.modal__replace-checkbox svg {
+    opacity: 1;
+}
+
+
+.modal__form-item{
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    position: relative;
+
+}
+
+.modal--terms{
+    padding-bottom: 20px;
+    flex-direction: row;
+    gap: 7px;
+  }
+
+.modal__form-item:focus-within svg use {
+    fill: #2196F3; 
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .modal__text , 
+.modal__text-terms
+{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+    color: #757575;
+    padding-bottom: 4px;
+}
+
+.modal__text-terms{
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+}
+
+li p.modal__text-terms {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.modal__input-dimensions ,
+.modal__textarea
+{
+    width: 448px;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    margin-bottom: 10px;
+    position: relative;
+    cursor: pointer;
+}
+
+.modal__input-dimensions {
+    padding-left: 42px;
+}
+
+.modal__textarea{
+    width: 488px;
+    height: 120px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+
+}
+
+.modal__input-dimensions:focus ,
+.modal__textarea:focus
+{
+    outline: none;
+    border: 1px solid #2196F3;
+    border-radius: 4px;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__svg-contact ,
+.modal__svg-telephone ,
+.modal__svg-email
+ {
+  display: flex;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 33px;
+  left: 12px;
+}
+
+.modal__button-submit{
+    color: #FFFFFF;
+    background: #2196F3;
+    padding: 10px 80px;
+    margin: 0 auto;
+    display: block;
+}
+
+.section__find-us-text , .section__subscribe-footer{
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    padding-top: 15px;
+}
 
 .section{
     padding: 94px 0px;
     padding-top: 94px;
+}
+
+.section--header , 
+.section--footer
+{
+    padding: 0px;
 }
 
 .container{
@@ -1300,7 +1540,7 @@ ul.informations-of-contact li:last-child {
 }
 
 
-.social-media-grid__item:hover , .icon-list-item-footer:hover {
+.social-media-grid__item:hover , .section__icon-list-item-footer:hover {
     background: #2196F3;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1393,6 +1633,173 @@ ul.informations-of-contact li:last-child {
     border-color: #2196F3;
     cursor: pointer;
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* bem footer */
+
+.page-footer{
+    background: #2F303A;
+}
+
+.section__footer-style{
+    display: flex;
+    padding-top: 60px;
+    gap: 94px;
+}
+
+
+.section__footer-logo-container {
+    display: flex;
+    gap: 94px;
+}
+
+.section__footer-logo {
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+}
+
+.section__span-logo 
+{
+    color: #2196F3;
+}
+
+.section__informations-of-contact{
+    display: inline-block;
+    margin-top: 28px; 
+    
+  }
+
+  ul.section__informations-of-contact li {
+    margin-bottom: 12px;
+}
+
+ul.section__informations-of-contact li:last-child {
+    margin-bottom: 60px;
+}
+
+.section__location{
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    
+}
+
+.section__contacts{
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.section__contacts:hover{
+    color: #2196F3;
+    
+}
+
+.section__find-us-section{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    gap: 20px;
+    padding-top: 15px;
+    
+}
+
+.section__social-icons{
+    display: flex;
+}
+
+.section__social-media-icons {
+    display: flex;
+    justify-content: center;
+}
+.section__social-media-icons ul{
+    display: flex;
+    gap: 10px;
+}
+
+.section__social-media-icons-svg{
+    fill: #afb1b8;
+    display: flex;
+    width: 20px;
+    height: 20px;
+}
+
+.section__social-media-icons-svg:hover{
+    fill: #FFFFFF;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.section__icon-list-footer{
+    color: #FFFFFF;
+    fill: #FFFFFF;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.section__icon-list-footer:hover {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.section__icon-list-item-footer{
+    background: rgba(255, 255, 255, 0.1);
+}
+
+
+.section__icon-list-item-footer
+{
+    display: flex;
+    width: 44px;
+    height: 44px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.icon-list-item-footer:hover {
+    background: #2196F3;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.section__newsletter{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-top: 15px;
+    position: relative;
+}
+
+.section__footer-subscribe-button{
+    position: absolute;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    width: 200px;
+    height: 50px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-left: 43px;
+    left: 370px;
+    
+}
+
+.section__subscribe-svg{
+    width: 24px;
+    height: 24px;
+    color: #FFFFFF;
+    fill: #fff;
+    padding-left: 25px;
 }
 
 
