--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,107 @@ body {
   margin: 0px auto;
 }
 
+.link {
+  color: #212121;
+  text-decoration: none;
+}
+
+.unstyled-list {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0, 1);
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .section {
   padding: 94px 0px;
   padding-top: 94px;
+}
+
+.section--header {
+  padding: 0px;
+}
+
+.section--footer {
+  padding: 0px;
+}
+
+.section__hero {
+  padding: 0px;
+}
+
+.container {
+  width: 1200px;
+  margin: 0px auto;
+  list-style: none;
+}
+
+.grid {
+  display: flex;
+  gap: 30px;
+  margin: 0 auto;
+  list-style: none;
+  padding: 0px;
+}
+
+* {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+body {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #212121;
+  margin: 0px auto;
+}
+
+.link {
+  color: #212121;
+  text-decoration: none;
+}
+
+.unstyled-list {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0, 1);
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.section {
+  padding: 94px 0px;
+  padding-top: 94px;
+}
+
+.section--header {
+  padding: 0px;
+}
+
+.section--footer {
+  padding: 0px;
+}
+
+.section__hero {
+  padding: 0px;
 }
 
 .container {
@@ -36,6 +134,20 @@ body {
 
 .header--border {
   border-bottom: 1px solid #ECECEC;
+}
+
+.link {
+  color: #212121;
+  text-decoration: none;
+}
+
+.section {
+  padding: 94px 0px;
+  padding-top: 94px;
+}
+
+.section--header {
+  padding: 0px;
 }
 
 .section__page--header {
@@ -172,6 +284,73 @@ body {
   fill: #2196F3;
 }
 
+body {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #212121;
+  margin: 0px auto;
+}
+
+.link {
+  color: #212121;
+  text-decoration: none;
+}
+
+.unstyled-list {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0, 1);
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.section {
+  padding: 94px 0px;
+  padding-top: 94px;
+}
+
+.section--header {
+  padding: 0px;
+}
+
+.section--footer {
+  padding: 0px;
+}
+
+.section__hero {
+  padding: 0px;
+}
+
+.container {
+  width: 1200px;
+  margin: 0px auto;
+  list-style: none;
+}
+
+.grid {
+  display: flex;
+  gap: 30px;
+  margin: 0 auto;
+  list-style: none;
+  padding: 0px;
+}
+
+* {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
 .page-footer {
   background: #2F303A;
 }
@@ -286,6 +465,22 @@ ul.section__informations-of-contact li:last-child {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.section__find-us-text {
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  padding-top: 15px;
+}
+
+.section__subscribe-footer {
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  padding-top: 15px;
+}
+
 .section__newsletter {
   display: flex;
   flex-direction: column;
@@ -321,6 +516,39 @@ ul.section__informations-of-contact li:last-child {
   padding-left: 25px;
 }
 
+.email-footer {
+  position: relative;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+.email-footer input[type=email] {
+  width: inherit;
+  height: inherit;
+  background: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+.email-footer input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
 .section__button-list {
   display: flex;
   justify-content: center;
@@ -340,7 +568,7 @@ ul.section__informations-of-contact li:last-child {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .section__button:hover {
-  color: #212121;
+  color: #FFFFFF;
   background: #2196F3;
   border: none;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -415,7 +643,7 @@ ul.section__informations-of-contact li:last-child {
   font-size: 18px;
   line-height: 28px;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: #FFFFFF;
   padding: 64px 24px 91px 24px;
 }
 
@@ -435,7 +663,7 @@ ul.section__informations-of-contact li:last-child {
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.03em;
-  color: #2196F3;
+  color: #757575;
   padding: 0px 24px 20px;
   position: relative;
   z-index: 1;
@@ -686,6 +914,17 @@ ul.section__informations-of-contact li:last-child {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.section__social-media-icons-svg {
+  fill: #afb1b8;
+  display: flex;
+  width: 20px;
+  height: 20px;
+}
+.section__social-media-icons-svg:hover {
+  fill: #FFFFFF;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .regular-customers-svg-container {
   box-sizing: border-box;
   width: 170px;
@@ -721,6 +960,26 @@ ul.section__informations-of-contact li:last-child {
 
 .svg-container-customers__svg {
   fill: #AFB1B8;
+}
+
+.modal {
+  background: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0, 1);
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal__span-terms {
