--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -4,6 +4,21 @@
 .header--border {
 	border-bottom: 1px solid #ECECEC;
 }
+
+.link{
+    color: #212121;
+    text-decoration: none;
+}
+
+.section {
+	padding: 94px 0px;
+	padding-top: 94px;
+}
+
+.section--header {
+	padding: 0px;
+}
+
 .section__page--header {
 	background-color: $background-color_1;
 	display: flex;
@@ -41,11 +56,13 @@
 		text-decoration: none;
 	}
 }
+
 .section__navigation--list--item {
 	a {
 		transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	}
 }
+
 .section__navigation--link {
 	letter-spacing: 0.02em;
 	color: $color_1;
