--- a/sass/components/_index-features-section.scss
+++ b/sass/components/_index-features-section.scss
@@ -22,34 +22,40 @@
 	justify-content: center;
 	width: 270px;
 	height: 251px;
-}
-.feature-studio-svg-container__item {
-	width: 270px;
-	height: 120px;
-	background-color: $background-color_4;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	svg {
-		width: 70px;
-		height: 70px;
+
+	&__item {
+		width: 270px;
+		height: 120px;
+		background-color: $background-color_4;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		svg {
+			width: 70px;
+			height: 70px;
+		}
 	}
+
 }
+
 .feature-studio-content {
 	height: 120px;
 	width: 270px;
-}
-.feature-studio__title {
-	padding-top: 30px;
-	padding-bottom: 10px;
-	font-weight: 700;
-	letter-spacing: 0.03em;
-	text-transform: uppercase;
-}
-.feature-studio__description {
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 24px;
-	letter-spacing: 0.03em;
-	color: $color_3;
+
+	&__title {
+		padding-top: 30px;
+		padding-bottom: 10px;
+		font-weight: 700;
+		letter-spacing: 0.03em;
+		text-transform: uppercase;
+	}
+
+	&__description {
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 24px;
+		letter-spacing: 0.03em;
+		color: $color_3;
+	}
+
 }
