--- a/sass/components/_index-first-section.scss
+++ b/sass/components/_index-first-section.scss
@@ -11,32 +11,33 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-}
-.studio-height__title {
-	font-weight: 900;
-	font-size: 44px;
-	line-height: 60px;
-	text-align: center;
-	letter-spacing: 0.06em;
-	text-transform: uppercase;
-	color: $color_4;
-	padding-bottom: 30px;
+
+	&__title{
+		font-weight: 900;
+		font-size: 44px;
+		line-height: 60px;
+		text-align: center;
+		letter-spacing: 0.06em;
+		text-transform: uppercase;
+		color: $color_4;
+		padding-bottom: 30px;
+	}
+	&__button{
+		font-size: 16px;
+		line-height: 26px;
+		text-align: center;
+		letter-spacing: 0.03em;
+		background: #F5F4FA;
+		border: 0;
+		border-radius: 4px;
+		padding: 6px 22px;
+		transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+		color: $color_4;
+		background: #2196F3;
+		padding: 10px 20px;
+	}
 }
 
-.studio-height__button {
-	font-size: 16px;
-	line-height: 26px;
-	text-align: center;
-	letter-spacing: 0.03em;
-	background: #F5F4FA;
-	border: 0;
-	border-radius: 4px;
-	padding: 6px 22px;
-	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	color: $color_4;
-	background: #2196F3;
-	padding: 10px 20px;
-}
 .modal__button-submit {
 	font-size: 16px;
 	line-height: 26px;
