--- a/sass/components/_index-our-team-section.scss
+++ b/sass/components/_index-our-team-section.scss
@@ -16,34 +16,40 @@
 	padding-bottom: 50px;
 	margin-top: 94px;
 }
+
 .member {
 	display: flex;
 	flex-direction: column;
 	margin: 0 auto;
 	justify-content: center;
 	align-items: center;
-}
-.member__name {
+
+	&__name{
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 19px;
 	letter-spacing: 0.03em;
 	text-align: center;
 	padding: 30px 0px 10px;
+	}
+
+	&__occupation {
+		font-weight: 400;
+		font-size: 16px;
+		line-height: 19px;
+		letter-spacing: 0.03em;
+		color: $color_3;
+		text-align: center;
+		padding-bottom: 16px;
+	}
+
+	&__image{
+		height: 260px;
+		width: 270px;
+	}
+
 }
-.member__occupation {
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 19px;
-	letter-spacing: 0.03em;
-	color: $color_3;
-	text-align: center;
-	padding-bottom: 16px;
-}
-.member__image {
-	height: 260px;
-	width: 270px;
-}
+
 .social-media-grid {
 	display: flex;
 	list-style: none;
@@ -53,49 +59,53 @@
 		display: flex;
 		gap: 10px;
 	}
-}
-.social-media-grid__item {
-	display: flex;
-	width: 44px;
-	height: 44px;
-	justify-content: center;
-	align-items: center;
-	border-radius: 50%;
-	&:hover {
+
+	&__item{
+		display: flex;
+		width: 44px;
+		height: 44px;
+		justify-content: center;
+		align-items: center;
+		border-radius: 50%;
+		&:hover {
+			background: #2196F3;
+			cursor: pointer;
+			transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+			svg {
+				fill: #FFFFFF;
+				transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+			}
+		}
+	}
+
+	&__icons-svg{
+		fill: #afb1b8;
+		display: flex;
+		width: 20px;
+		height: 20px;
+		&:hover {
+			fill: #FFFFFF;
+			transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+		}
+	}
+
+	&__icon-list-item-footer{
+		&:hover {
 		background: #2196F3;
 		cursor: pointer;
 		transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-		svg {
+		}
+	}
+
+	&__social-media-icons-svg {
+		fill: #afb1b8;
+		display: flex;
+		width: 20px;
+		height: 20px;
+		&:hover {
 			fill: #FFFFFF;
-			transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+			transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 		}
 	}
 }
-.social-media-grid__icons-svg {
-	fill: #afb1b8;
-	display: flex;
-	width: 20px;
-	height: 20px;
-	&:hover {
-		fill: #FFFFFF;
-		transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	}
-}
-.section__icon-list-item-footer {
-	&:hover {
-		background: #2196F3;
-		cursor: pointer;
-		transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	}
-}
 
-.section__social-media-icons-svg {
-	fill: #afb1b8;
-	display: flex;
-	width: 20px;
-	height: 20px;
-	&:hover {
-		fill: #FFFFFF;
-		transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	}
-}
