--- a/sass/components/_index-regular-customers-section.scss
+++ b/sass/components/_index-regular-customers-section.scss
@@ -30,7 +30,8 @@
 .svg-container-customers {
 	width: 106px;
 	height: 60px;
-}
-.svg-container-customers__svg {
-	fill: #AFB1B8;
+
+	&__svg {
+		fill: #AFB1B8;
+	}
 }
