--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,4 @@
-@import'../sass/utils/vars' ;
+@import"../sass/utils/vars";
 @import"../sass/base/base" ;
 @import"../sass/components/page-header" ;
 @import"../sass/components/page-footer" ;
