--- a/sass/components/_index-regular-customers-section.scss
+++ b/sass/components/_index-regular-customers-section.scss
@@ -1,6 +1,6 @@
 @import"../utils/vars" ;
 
-.regular-customers-svg-container {
+.customers-container {
 	box-sizing: border-box;
 	width: 170px;
 	height: 92px;
