--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -6,8 +6,8 @@
 }
 
 .section {
-	padding: 94px 0px;
-	padding-top: 94px;
+	// padding: 94px 0px;
+	// padding-top: 94px;
 
 	&__footer-style {
 		display: flex;
