--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,8 +1,8 @@
 @import"../utils/vars" ;
 
 .section {
-	padding: 94px 0px;
-	padding-top: 94px;
+	// padding: 94px 0px;
+	// padding-top: 94px;
 
 	&__button-list {
 		display: flex;
