--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -10,31 +10,16 @@
     text-decoration: none;
 }
 
-.section {
-	padding: 94px 0px;
-	padding-top: 94px;
+.header {
 
-	&__page--header {
+	&__main{
 		background-color: $background-color_1;
 		display: flex;
 		padding: 32px 0px;
 	}
 
-	&__header--logo {
-		font-weight: 700;
-		font-size: 26px;
-		line-height: 31px;
-		letter-spacing: 0.03em;
-		margin-right: 93px;
-		color: $color_1;
-		text-decoration: none;
-	}
 
-	&__span--logo {
-		color: $color_2;
-	}
-
-	&__header--navigation {
+	&__navigation {
 		.section__hero {
 			background-color: $background-color_2;
 		}
@@ -43,7 +28,8 @@
 		flex-grow: 1;
 	}
 
-	&__navigation--list {
+	&__navlist {
+		padding: 0px;
 		display: flex;
 		gap: 50px;
 		flex-grow: 1;
@@ -53,7 +39,7 @@
 		}
 	}
 
-	&__navigation--list--item {
+	&__navlist--item {
 		a {
 			transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 		}
@@ -142,6 +128,20 @@
 		transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	}
 
+}
+
+.logo--headersection{
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 31px;
+	letter-spacing: 0.03em;
+	margin-right: 93px;
+	color: $color_1;
+	text-decoration: none;
+}
+
+.logo__headertext{
+	color: $color_2;
 }
 
 .section--header {
