--- a/css/main.css
+++ b/css/main.css
@@ -946,7 +946,7 @@ body {
   margin: 0 auto;
   display: block;
 }
-.modal____div {
+.modal__div {
   width: 528px;
   height: 581px;
   background: #FFFFFF;
