--- a/sass/components/_index-modal.scss
+++ b/sass/components/_index-modal.scss
@@ -40,7 +40,7 @@
 		display: block;
 	}
 
-	&____div{
+	&__div{
 		width: 528px;
 		height: 581px;
 		background: #FFFFFF;
@@ -95,6 +95,7 @@
 		display: flex;
 		flex-direction: column;
 		gap: 10px;
+
 		&:focus+.modal__svg-contact {
 			fill: #2196F3;
 		}
